# strings

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  strings.hh
examples/: usage.cc
test/: test.cc
